# sonos-mcp-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  dagger.json  docker-compose.yml  pyproject.toml
.claude/: mcp.json  settings.json
.dagger/: pyproject.toml
.github/workflows/: ci.yml  publish.yml
_bmad/: config.toml  config.user.toml
_bmad-output/: PHASES.md  phase-index.yaml
_bmad-output/implementation-artifacts/: 1-1-expose-play-mode-controls-for-active-rooms.md  1-1-initialize-the-soniqmcp-application-scaffold.md  1-2-implement-typed-configuration-and-validation.md  1-2-support-seek-and-sleep-timer-operations.md  1-3-add-room-level-audio-eq-controls.md  1-3-run-soniqmcp-locally-over-stdio.md  1-4-enforce-safe-defaults-and-tool-exposure-controls.md  1-4-harden-advanced-playback-contracts-and-regression-coverage.md  1-5-deliver-local-setup-and-troubleshooting-guidance.md  2-1-discover-addressable-rooms-and-system-topology.md  2-2-control-core-playback-in-a-target-room.md  2-3-control-volume-and-mute-safely.md  2-4-apply-reliable-sonos-service-and-adapter-boundaries.md  3-1-manage-the-sonos-queue.md  3-2-access-and-play-favourites-and-playlists.md  3-3-control-room-grouping-and-multi-room-playback.md  4-1-run-soniqmcp-over-streamable-http.md  4-2-package-the-server-as-a-docker-image.md  4-3-provide-a-helm-chart-for-self-hosted-deployment.md  4-4-document-remote-docker-helm-and-cross-device-usage.md  4-5-establish-ci-quality-gates-and-release-automation.md  5-1-support-agent-mediated-integration-patterns.md  5-2-deliver-consistent-diagnostics-and-troubleshooting-support.md  5-3-deliver-productized-examples-prompts-and-command-surface.md  5-4-publish-operational-security-and-release-guidance.md  deferred-work.md  epic-1-retro-2026-04-11.md  epic-2-retro-2026-04-11.md  epic-3-retro-2026-04-12.md  epic-4-retro-2026-04-13.md  epic-5-retro-2026-04-13.md  optional-auth-sprint-status.yaml  review-acceptance-auditor.md  review-blind-hunter.md  review-edge-case-hunter.md  sprint-status.yaml  story-1-2-code-review.md
_bmad-output/planning-artifacts/: architecture.md  epics-optional-auth.md  epics.md  implementation-readiness-report-2026-03-23.md  implementation-readiness-report-2026-04-23.md  implementation-readiness-report-optional-auth-2026-04-23.md  oidc-authelia-integration-assessment-2026-04-22.md  prd-optional-auth.md  prd.md  prfaq-sonos-mcp-server-distillate.md  prfaq-sonos-mcp-server.md  sprint-change-proposal-2026-04-11.md  validation-report-2026-04-02.md  validation-report-2026-04-07.md
_bmad-output/test-artifacts/: test-review.md
_bmad/_config/: agent-manifest.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: sonos-mcp-research.md
docs/integrations/: README.md  claude-desktop.md  home-assistant.md  n8n.md
docs/prompts/: README.md  command-reference.md  example-uses.md
docs/security/: threat-model.md
docs/setup/: README.md  authentication.md  docker.md  helm.md  operations.md  releasing.md  stdio.md  troubleshooting.md
helm/soniq/: Chart.yaml  README.md  values.yaml
scripts/: release.py
(+187 files in other folders)
