[project]
name = "soniq-mcp"
version = "0.1.0"
description = "Sonos MCP server"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "soco>=0.30.14",
]

[project.scripts]
soniq-mcp = "soniq_mcp:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
